# timer-tui

./: main.py  pyproject.toml  style.tcss
timer-tui/: app.py  dual_timer.py  main.py  main_screen.py  style.tcss  timer.py  tui_app.py
timer-tui/screens/: dual_timer.py  main_menu.py  time_timer.py
